--- a/ehr-core/pom.xml
+++ b/ehr-core/pom.xml
@@ -64,7 +64,7 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
-        <!--  Druid阿里连接池  -->
+        <!--  Druid阿里连接池驱动版本已更新  -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
